Update drop space in .env,example

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,6 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 #setting slack invite automation
-SLACK_TEAM_NAME=slack team name
-SLACK_CHANNEL=slack channel
-SLACK_TOKEN=slack token
+SLACK_TEAM_NAME=TeamName
+SLACK_CHANNEL=Channel
+SLACK_TOKEN=Token
